# tonic

./: Cargo.toml
tests/stream_custom/: Cargo.toml  build.rs
tests/stream_custom/proto/: stream_custom.proto
tests/stream_custom/src/: main.rs
tonic-build/src/: server.rs
